--- a/index.html
+++ b/index.html
@@ -514,7 +514,9 @@
                                         </h2>
                                         <form action="#" class="about__form__form">
                                             <input type="text" placeholder="ФИО*" class="form__input" required>
-                                            <input type="text" class="form__input phone">
+                                            <div class="phone__wrap">
+                                                <input type="text" class="form__input phone">
+                                            </div>
                                             <input type="email" class="form__input" placeholder="Email*">
                                             <div class="wrapper_start">
                                                 <label for="policy-check" class="policy-check">
@@ -933,7 +935,9 @@
                                         <div class="about__quest__form__wrapper">
                                             <div>
                                                 <input type="text" placeholder="ФИО*" class="form__input" required>
-                                                <input type="text" class="form__input phone">
+                                                <div class="phone__wrap">
+                                                    <input type="text" class="form__input phone">
+                                                </div>
                                                 <input type="email" class="form__input" placeholder="Email*">
                                             </div>
                                             <div>
@@ -1115,7 +1119,9 @@
                     </h2>
                     <form action="#" class="about__form__form">
                         <input type="text" placeholder="ФИО*" class="form__input" required>
-                        <input type="text" class="form__input phone">
+                        <div class="phone__wrap">
+                            <input type="text" class="form__input phone">
+                        </div>
                         <input type="email" class="form__input" placeholder="Email*">
                         <div class="wrapper_start">
                             <label for="policy-check" class="policy-check">
