--- a/index.html
+++ b/index.html
@@ -1381,7 +1381,7 @@
                     </div>
                     <div class="programm__item">
                         <div class="programm__item-top">
-                            <p class="heading">Специальное (дефектологическое) образование по направлению «Работа с обучающимися с нарушениями речи и коммуникации» (620ч)</p>
+                            <p class="heading">Практическая психология с дополнительной специализацией в области применения психотерапевтических технологий (1840ч)</p>
                         </div>
                         <div class="programm__item-bottom">
                             <div class="wrapper">
@@ -1404,7 +1404,7 @@
                     </div>
                     <div class="programm__item">
                         <div class="programm__item-top">
-                            <p class="heading">Специальное (дефектологическое) образование по направлению «Работа с обучающимися с нарушениями речи и коммуникации» (620ч)</p>
+                            <p class="heading">Нейропсихология детского возраста (144ч)</p>
                         </div>
                         <div class="programm__item-bottom">
                             <div class="wrapper">
@@ -1427,7 +1427,7 @@
                     </div>
                     <div class="programm__item">
                         <div class="programm__item-top">
-                            <p class="heading">Специальное (дефектологическое) образование по направлению «Работа с обучающимися с нарушениями речи и коммуникации» (620ч)</p>
+                            <p class="heading">Клиническая (медицинская) психология со специализацией по патопсихологии (2030ч)</p>
                         </div>
                         <div class="programm__item-bottom">
                             <div class="wrapper">
